--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,7 @@
 
 @article{yao2022empirical,
   abbr={ICBINB},
-  title={An Empirical Analysis of the Advantages of Finite vs. Infinite Width Bayesian Neural Networks},
+  title={An Empirical Analysis of the Advantages of Finite- vs. Infinite-Width Bayesian Neural Networks},
   author={Yao, Jiayu and Yacoby, Yaniv and Coker, Beau and Pan, Weiwei and Doshi-Velez, Finale},
   journal={NeurIPS ICBINB},
   year={2022},
