--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -54,8 +54,8 @@
 }
 
 @article{yacoby2020failure,
-  insubmission={yes},
-  abbr={JMLR, ICML UDL},
+  insubmission={no},
+  abbr={arXiv, ICML UDL},
   title={Failure Modes of Variational Autoencoders and Their Effects on Downstream Tasks},
   author={Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
   journal={JMLR},
@@ -69,8 +69,8 @@
 
 
 @article{thakur2020uncertainty,
-  insubmission={yes},
-  abbr={JMLR, ICML UDL},
+  insubmission={no},
+  abbr={arXiv, ICML UDL},
   title={Uncertainty-Aware (UNA) Bases for Deep Bayesian Regression Using Multi-Headed Auxiliary Networks},
   author={*Thakur, Sujay and *Lorsung, Cooper and *Yacoby, Yaniv and Doshi-Velez, Finale and Pan, Weiwei},
   journal={JMLR},
