--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{wang2023idiographic,
+  insubmission={no},
+  abbr={PsyArXiv},
+  title={Idiographic Prediction of Suicidal Thoughts: Building Personalized Machine Learning Models with Real-Time Monitoring Data},
+  author={Wang, Shirley and van Genugten, Ruben and Yacoby, Yaniv and Pan, Weiwei and Bentley, Kate and Bird, Suzanne and Buonopane, Ralph and Christie, Alexis and Daniel, Merryn and DeMarco, Dylan and others},
+  year={2023},
+  journal={PsyArXiv}
+  abstract={Suicide risk is highest immediately after psychiatric hospitalization, but the field lacks methods for identifying which patients are at greatest risk, and when. We built personalized models predicting suicidal thoughts after psychiatric hospital visits (N=89 patients), using ecological momentary assessment (EMA; average EMA responses per participant=311). We built several idiographic models, including baseline autoregressive and elastic net models (using single train/test split) and Gaussian Process (GP) models (using an iterative rolling-forward prediction method). Simple GP models provided the best prediction of suicidal urges (R2_average=0.17), outperforming baseline autoregressive (R2_average=0.10) and elastic net (R2_average=0.07) models. Similarly, simple GP models provided the best prediction of suicidal intent (R2_average=0.12) compared to autoregressive (R2_average=0.08) and elastic net (R2_average=0.06). Findings suggest idiographic prediction of suicidal thoughts is possible, though accuracy currently is modest. Building GP models that iteratively update and learn symptom dynamics over time could provide important information to inform development of just-in-time adaptive interventions.},
+  pdf={https://osf.io/preprints/psyarxiv/qh4jk},
+}
+
 @article{yacoby2023cs290,
   abbr={SIGCSE},
   title={Empowering First-Year Computer Science Ph.D. Students to Create a Culture that Values Community and Mental Health},
@@ -58,7 +69,7 @@
   abbr={arXiv, ICML UDL},
   title={Failure Modes of Variational Autoencoders and Their Effects on Downstream Tasks},
   author={Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
-  journal={JMLR},
+  journal={arXiv},
   year={2022},
   workshop_title={ICML UDL},
   workshop_year={2020},  
@@ -73,7 +84,7 @@
   abbr={arXiv, ICML UDL},
   title={Uncertainty-Aware (UNA) Bases for Deep Bayesian Regression Using Multi-Headed Auxiliary Networks},
   author={*Thakur, Sujay and *Lorsung, Cooper and *Yacoby, Yaniv and Doshi-Velez, Finale and Pan, Weiwei},
-  journal={JMLR},
+  journal={arXiv},
   year={2022},
   workshop_title={ICML UDL},
   workshop_year={2020},    
