--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   title={Idiographic Prediction of Suicidal Thoughts: Building Personalized Machine Learning Models with Real-Time Monitoring Data},
   author={Wang, Shirley and van Genugten, Ruben and Yacoby, Yaniv and Pan, Weiwei and Bentley, Kate and Bird, Suzanne and Buonopane, Ralph and Christie, Alexis and Daniel, Merryn and DeMarco, Dylan and others},
   year={2023},
-  journal={PsyArXiv}
+  journal={PsyArXiv},
   abstract={Suicide risk is highest immediately after psychiatric hospitalization, but the field lacks methods for identifying which patients are at greatest risk, and when. We built personalized models predicting suicidal thoughts after psychiatric hospital visits (N=89 patients), using ecological momentary assessment (EMA; average EMA responses per participant=311). We built several idiographic models, including baseline autoregressive and elastic net models (using single train/test split) and Gaussian Process (GP) models (using an iterative rolling-forward prediction method). Simple GP models provided the best prediction of suicidal urges (R2_average of 0.17), outperforming baseline autoregressive (R2_average of 0.10) and elastic net (R2_average of 0.07) models. Similarly, simple GP models provided the best prediction of suicidal intent (R2_average of 0.12) compared to autoregressive (R2_average of 0.08) and elastic net (R2_average of 0.06). Findings suggest idiographic prediction of suicidal thoughts is possible, though accuracy currently is modest. Building GP models that iteratively update and learn symptom dynamics over time could provide important information to inform development of just-in-time adaptive interventions.},
   pdf={https://osf.io/preprints/psyarxiv/qh4jk},
 }
