--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{yacoby2020mapa,
   insubmission={no},
-  abbr={arXiv},
+  abbr={AABI}
   title={Towards Model-Agnostic Posterior Approximation for Fast and Accurate Variational Autoencoders},
   author={Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
   journal={arXiv},
