--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
 @article{wang2023idiographic,
   insubmission={no},
   abbr={Nature},
-  title={Idiographic Prediction of Suicidal Thoughts: Building Personalized Machine Learning Models with Real-Time Monitoring Data},
+  title={Building personalized machine learning models using real-time monitoring data to predict idiographic suicidal thoughts},
   author={Wang, Shirley and van Genugten, Ruben and Yacoby, Yaniv and Pan, Weiwei and Bentley, Kate and Bird, Suzanne and Buonopane, Ralph and Christie, Alexis and Daniel, Merryn and DeMarco, Dylan and Haim, Adam and Follet, Lia and Fortgang, Rebecca and Kelly, Flynn and Kleiman, Evan and Millner, Alex and Obi-Obasi, Onyinyechi and Onnela, Jukka-Pekka and Ramlal, Narise and Ricard, Jordyn and Smoller, Jordan W. and Tambedou, Tida and Zuromski, Kelly and Nock, Matthew},
   year={2024},
   journal={Nature Mental Health},
