--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{arens2025preference,
+  insubmission={no},
+  abbr={Science},
+  title={Preference-based Assistance Optimization for Lifting and Lowering with a Soft Back Exosuit},
+  author={Arens, Philipp and Quirk, Adam and Pan, Weiwei and Yacoby, Yaniv and Doshi-Velez, Finale and Walsh, Conor},
+  year={2025},
+  journal={Science Advances},
+  abstract={Wearable robotic devices have become increasingly prevalent in both occupational and rehabilitative settings, yet their widespread adoption remains inhibited by usability barriers related to comfort, restriction, and noticeable functional benefits. Acknowledging the importance of user perception in this context, this study explores preference-based controller optimization for a back exosuit that assists lifting. Considering the high mental and metabolic effort discrete motor tasks impose, we used a forced-choice Bayesian Optimization approach that promotes sampling efficiency by leveraging domain knowledge about just noticeable differences between assistance settings. Optimizing over two control parameters, preferred settings were consistent within and uniquely different between participants. We discovered that overall, participants preferred asymmetric parameter configurations with more lifting than lowering assistance, and that preferences were sensitive to user anthropometrics. These findings highlight the potential of perceptually guided assistance optimization for wearable robotic devices, marking a step toward more pervasive adoption of these systems in the real world.},
+  pdf={https://www.science.org/doi/10.1126/sciadv.adu2099},
+}
 
 @inproceedings{yacoby2020mapa,
   abbr={AABI},
