--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,8 +4,8 @@
 @inproceedings{tadesse2025transparent,
   abbr={UAI},
   title={Transparent Trade-offs between Properties of Explanations},
-  author={Tadesse, Hiwot Belay and H{\"u}y{\"u}k, Alihan and Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
-  journal={UAI},
+  author={Tadesse, Hiwot Belay and Hüyük, Alihan and Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
+  booktitle={UAI},
   year={2025},
   workshop_title={ICML HAS},
   workshop_year={2024},
