--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @inproceedings{liu2025neural,
+  abbr={MOSS},
   title={Neural Stochastic Differential Equations on Compact State-Spaces},
   author={Liu, Yue-Jane and Lu, Malinda and Nock, Matthew K and Yacoby, Yaniv},
   booktitle={ICML MOSS},
