--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @inproceedings{liu2025neural,
-  abbr={MOSS},
+  abbr={ICML MOSS},
   title={Neural Stochastic Differential Equations on Compact State-Spaces},
   author={Liu, Yue-Jane and Lu, Malinda and Nock, Matthew K and Yacoby, Yaniv},
   booktitle={ICML MOSS},
@@ -13,7 +13,7 @@
 }
 
 @inproceedings{tadesse2025transparent,
-  abbr={UAI},
+  abbr={UAI, ICML HAS},
   title={Transparent Trade-offs between Properties of Explanations},
   author={Tadesse, Hiwot and Hüyük, Alihan and Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
   booktitle={UAI},
@@ -70,7 +70,7 @@
 }
 
 @article{yao2022empirical,
-  abbr={ICBINB},
+  abbr={NeurIPS ICBINB},
   title={An Empirical Analysis of the Advantages of Finite- vs. Infinite-Width Bayesian Neural Networks},
   author={Yao, Jiayu and Yacoby, Yaniv and Coker, Beau and Pan, Weiwei and Doshi-Velez, Finale},
   journal={NeurIPS ICBINB},
