--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @inproceedings{liu2025neural,
   abbr={ICML MOSS},
   title={Neural Stochastic Differential Equations on Compact State-Spaces},
-  author={Liu, Yue-Jane and Lu, Malinda and Nock, Matthew K and Yacoby, Yaniv},
+  author={Liu, Yue-Jane and Lu, Malinda and Nock, Matthew and Yacoby, Yaniv},
   booktitle={ICML MOSS},
   year={2025},
   abstract={Many modern probabilistic models rely on SDEs, but their adoption is hampered by instability, poor inductive bias outside bounded domains, and reliance on restrictive dynamics or training tricks.  While recent work constrains SDEs to compact spaces using reflected dynamics, these approaches lack continuous dynamics and efficient high-order solvers, limiting interpretability and applicability.  We propose a novel class of neural SDEs on compact polyhedral spaces with continuous dynamics, amenable to higher-order solvers, and with favorable inductive bias.},
