--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,11 +17,11 @@
 @inproceedings{hang2025improving,
   abbr={NeurIPS TS4H},
   title={Improving Forecasts of Suicide Attempts for Patients with Little Data},
-  author={Hang, Genesis and Neveux, Hope and Nock, Matthew and Yacoby, Yaniv},
+  author={Hang, Genesis and Chen, Annie and Neveux, Hope and Nock, Matthew and Yacoby, Yaniv},
   booktitle={NeurIPS TS4H},
   year={2025},
   abstract={Ecological Momentary Assessment provides real-time data on suicidal thoughts and behaviors, but predicting suicide attempts remains challenging due to their rarity and patient heterogeneity. We show that single models fit to all patients perform poorly, while individualized models overfit with limited data. To address this, we introduce a Latent Similarity Gaussian Process (LSGP) that models patient heterogeneity, enabling those with little data to leverage similar patients' trends. Preliminary results show improved sensitivity over baselines and offer new understanding of patient similarity.},
-  pdf={https://openreview.net/pdf?id=Dte4p8Kz0L},
+  pdf={https://arxiv.org/abs/2511.18199},
   selected={true},
 }
 
